# gtestusage

./: .clang-format  .clang-tidy  CMakeLists.txt  cd  code  code.cpp  code_test.cpp  concurrent_test.cpp  concurrent_with_thread_pool_test  concurrent_with_thread_pool_test.cpp  format_test  github_recovery_code.txt  keybindings.json  mycode  mycode.cpp  qSort.cpp  settings.json  string  string.cpp  test_copilot  test_copilot.cpp  thread_pool.h
.cache/clangd/index/: code.cpp.49933325EE2A28B4.idx  code.cpp.5FEB90E064381B35.idx  code_test.cpp.340593FD9A9CFBF7.idx  code_test.cpp.F47B4D634055C977.idx
.trunk/: trunk.yaml
emotional/: Emotional.R  Emotional.ipynb  Emotional_R.ipynb  Emotional_sentiment.ipynb  Feature_engineering.R(1).r  emotional.R  install.R  markdown.ipynb
